Moved admin cache to oauth

--- a/internal/web/routes/admin/guild/guild.html
+++ b/internal/web/routes/admin/guild/guild.html
@@ -14,7 +14,8 @@
 		{{ end }}
 
 		<div class="name">
-			<span>{{.Name}}</span>
+			<h2>{{.Name}}</h2>
+			<span>{{ $.MemberCount }} members</span>
 		</div>
 	</div>
 	{{ end }}
