migrate to go:embed, some more progress

--- a/internal/web/routes/admin/guild/guild.html
+++ b/internal/web/routes/admin/guild/guild.html
@@ -15,7 +15,7 @@
 
 		<div class="name">
 			<h2>{{.Name}}</h2>
-			<span>{{ $.MemberCount }} members</span>
+			<a href="./members">{{ $.MemberCount }} members</a>
 		</div>
 	</div>
 	{{ end }}
